--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	</head>
 	
 	<body>
-		<div class = 'yetou'><img class = 'logo' src = 'img/yl.png' /></div>
+		<div class = 'yetou'><img class = 'logo' src = 'img/YL.png' /></div>
 		<div class = "ZanW"></div>
 		
 		<div class = 'ZhanShiTu' style = 'width:100%;height:50px;'><img src = 'img/heise.jpg' style = 'width:100%;'> </div>
